--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     var remoteRepo = github.getRepo('database-rider', 'database-rider');
     remoteRepo.listReleases(function (err, releases) {
         for (var i = 0; i < releases.length; i++) {
-           console.log(releases[i]));
+           console.log(releases[i]);
         }
 
     });
